WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181867
Spread's effects are modeled incorrectly both in AI and in Clobberize
https://bugs.webkit.org/show_bug.cgi?id=181867
Summary
Spread's effects are modeled incorrectly both in AI and in Clobberize
Saam Barati
Reported
2018-01-19 11:14:56 PST
Fix is easy.
Attachments
patch
(5.08 KB, patch)
2018-01-19 11:19 PST
,
Saam Barati
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2018-01-19 11:15:36 PST
<
rdar://problem/36290415
>
Saam Barati
Comment 2
2018-01-19 11:19:27 PST
Created
attachment 331758
[details]
patch
Michael Saboff
Comment 3
2018-01-19 11:22:08 PST
Comment on
attachment 331758
[details]
patch r=me
WebKit Commit Bot
Comment 4
2018-01-19 13:15:59 PST
Comment on
attachment 331758
[details]
patch Clearing flags on attachment: 331758 Committed
r227229
: <
https://trac.webkit.org/changeset/227229
>
WebKit Commit Bot
Comment 5
2018-01-19 13:16:01 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug